# ACCT445-Showcase

./: .dockerignore  .gitignore  .pa11yci.json  .pre-commit-config.yaml  CODEX_OVERVIEW.md  CODEX_PHASE2_HANDOFF.md  CODEX_PHASE3_HANDOFF.md  CODEX_PHASE4_HANDOFF.md  CODEX_PHASE5_HANDOFF.md  DEPLOYMENT.md  Dockerfile  FACTOR_MODELS_SUMMARY.md  GITHUB_SETUP.md  LICENSE  Makefile  PHASE1_TESTING_INFRASTRUCTURE.md  PHASE2_CORE_ANALYSIS.md  PHASE3_REAL_DATA_INTEGRATION.md  PHASE4_ADVANCED_FEATURES.md  PHASE5_PRODUCTION_DEPLOYMENT.md  README.md  SPRINT_FINAL_SUMMARY.md  SUMMARY.txt  TRACK4_PRODUCTION_HARDENING_SUMMARY.md  docker-compose.yml  dvc.yaml  index.html  lighthouserc.json  methodology.html  pyproject.toml  requirements.txt
config/: .gitignore  auth.yaml  cik_ticker_overrides.csv  config.toml  factors_manifest.json  sample_cnoi.csv  sample_cnoi.csv.dvc
data/: cache.dvc
docs/: .gitignore  METHODOLOGY.md  index.html
notebooks/: 00_executive_summary.ipynb  00_quickstart.ipynb  01_data_exploration.ipynb  02_decile_analysis.ipynb  03_event_study.ipynb  04_panel_regression.ipynb  05_factor_alphas.ipynb  06_did_analysis.ipynb  07_robust_event_tests.ipynb  08_publication_summary.ipynb
results/: cnoi_panel_dataset.csv.dvc  cnoi_returns_merged.csv.dvc  cnoi_with_tickers.csv.dvc  decile_long_short_lag2_equal.csv.dvc  decile_long_short_latest.csv.dvc  decile_summary_lag2_equal.csv.dvc  decile_summary_lag5_equal.csv.dvc  decile_summary_latest.csv.dvc  dimension_comparison.csv.dvc  event_study_car_by_ticker.csv.dvc  event_study_daily_cum_ar.csv.dvc  event_study_results.csv.dvc  market_returns.csv.dvc  (+9 more)
(+133 files in other folders)
